--- a/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
+++ b/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
@@ -21,8 +21,15 @@
     <Text Include="inputs\input_1983.txt" />
     <Text Include="inputs\input_1986.txt" />
     <Text Include="inputs\input_1945.txt" />
+    <Text Include="inputs\input_1948.txt" />
+    <Text Include="inputs\input_1954.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="inputs\input_2005.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="D2\1954_달팽이 숫자.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
