--- a/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
+++ b/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
@@ -23,12 +23,18 @@
     <Text Include="inputs\input_1945.txt" />
     <Text Include="inputs\input_1948.txt" />
     <Text Include="inputs\input_1954.txt" />
+    <Text Include="inputs\input_1984.txt" />
+    <Text Include="inputs\input_1284.txt" />
+    <Text Include="inputs\input_1285.txt" />
+    <Text Include="inputs\input_1288.txt" />
+    <Text Include="inputs\input_1928.txt" />
+    <Text Include="inputs\input_1940.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="inputs\input_2005.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="D2\1954_달팽이 숫자.cpp">
+    <ClCompile Include="D2\1928_Base64 Decoder.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
