--- a/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
+++ b/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
@@ -31,12 +31,15 @@
     <Text Include="inputs\input_1940.txt" />
     <Text Include="inputs\input_14692.txt" />
     <Text Include="inputs\input_14555.txt" />
+    <Text Include="inputs\input_13218.txt" />
+    <Text Include="inputs\input_13547.txt" />
+    <Text Include="inputs\input_14178.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="inputs\input_2005.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="D3\14555_공과 잡초.cpp">
+    <ClCompile Include="D3\14178_1차원 정원.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
