--- a/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
+++ b/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
@@ -34,13 +34,11 @@
     <Text Include="inputs\input_13218.txt" />
     <Text Include="inputs\input_13547.txt" />
     <Text Include="inputs\input_14178.txt" />
+    <Text Include="inputs\input_12368.txt" />
+    <Text Include="inputs\input_12221.txt" />
+    <Text Include="inputs\input_11856.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="inputs\input_2005.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="D3\14178_1차원 정원.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
   </ItemGroup>
 </Project>
