--- a/SWExpertAcademy/SWExpertAcademy.vcxproj
+++ b/SWExpertAcademy/SWExpertAcademy.vcxproj
@@ -127,12 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Text Include="inputs\input_10200.txt" />
     <Text Include="inputs\input_10505.txt" />
     <Text Include="inputs\input_10804.txt" />
     <Text Include="inputs\input_10912.txt" />
     <Text Include="inputs\input_11688.txt" />
     <Text Include="inputs\input_11736.txt" />
     <Text Include="inputs\input_11856.txt" />
+    <Text Include="inputs\input_1217.txt" />
     <Text Include="inputs\input_12221.txt" />
     <Text Include="inputs\input_12368.txt" />
     <Text Include="inputs\input_1285.txt" />
@@ -155,12 +157,10 @@
     <Text Include="inputs\input_2007.txt" />
     <Text Include="inputs\input_1284.txt" />
     <Text Include="inputs\input_13218.txt" />
+    <Text Include="inputs\input_9997.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="inputs\input_2005.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="D3\10200_구독자 전쟁.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
