--- a/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
+++ b/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
@@ -46,8 +46,16 @@
     <Text Include="inputs\input_10200.txt" />
     <Text Include="inputs\input_9997.txt" />
     <Text Include="inputs\input_1217.txt" />
+    <Text Include="inputs\input_6730.txt" />
+    <Text Include="inputs\input_3431.txt" />
+    <Text Include="inputs\input_4406.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="inputs\input_2005.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="D3\1289_원재의 메모리 복구하기.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
