--- a/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
+++ b/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
@@ -49,12 +49,14 @@
     <Text Include="inputs\input_6730.txt" />
     <Text Include="inputs\input_3431.txt" />
     <Text Include="inputs\input_4406.txt" />
+    <Text Include="inputs\input_1289.txt" />
+    <Text Include="inputs\input_9317.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="inputs\input_2005.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="D3\1289_원재의 메모리 복구하기.cpp">
+    <ClCompile Include="1215_[SW 문제해결 기본] 3일차 - 회문1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
