--- a/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
+++ b/SWExpertAcademy/SWExpertAcademy.vcxproj.filters
@@ -55,4 +55,9 @@
   <ItemGroup>
     <None Include="inputs\input_2005.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="8673_코딩 토너먼트1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
